--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,18 @@
-spring.datasource.url=jdbc:mariadb://localhost:3304/mydb
-spring.datasource.username=myadmin
-spring.datasource.password=root
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# server 변경
+server.port=8080
+
+# DB Source URL
+spring.datasource.url=jdbc:mysql://54.180.101.34:3306/codeshelter?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+
+# DB username
+spring.datasource.username=finalproject
+
+# DB password
+spring.datasource.password=1212
+
+# JPA query show
+spring.jpa.show-sql=true
+
+spring.devtools.restart.enabled=false
+spring.devtools.livereload.enabled=true
+
